--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "DS2002 Spring 2025"
 description: "Syllabus, schedule, and assignments"
-theme: academic-jekyll-theme
+remote_theme: pages-themes/minimal@v0.2.0
